# thecommons

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BROADCAST_DESIGN_REVIEW.md  CLAUDE.md  CODING_STYLE.md  DEPLOY.md  DESIGN_BROADCAST.md  PROJECT_CONTEXT.md  dump.rdb  extensionzipper.sh  file_structure.txt  next.config.ts  package-lock.json  package.json  tailwind.config.js  teardown.sh  thecommons.code-workspace
backendServer/: .env.example  .gitignore  AGENTS.md  build.sh  main.py  pyproject.toml  vercel.json
backendServer/backend/: celery.py  jwt_auth.py  permissions.py  settings.py  test_runner.py  urls.py  wsgi.py
backendServer/backend/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backendServer/broadcast/: access.py  admin.py  apps.py  autofill.py  models.py  permissions.py  routing.py  runner.py  schema.py  serializers.py  services.py  urls.py  views.py  worker.py
backendServer/broadcast/adapters/: __init__.py  _generic.py  _helpers.py  _mock.py  _mock_form.html  abc11_community.py  base.py  chapelboro.py  chatham_arts.py  chatham_chamber.py  explore_pittsboro.py  fun4raleighkids.py  indy_week.py  shop_pittsboro.py  triangle_on_the_cheap.py  triangle_weekender.py  visit_raleigh.py
backendServer/broadcast/fixtures/: pittsboro_festival.json  (+3 more)
backendServer/devtools/: pipeline_runner.py  sse.py  urls.py  views.py
backendServer/events/: admin.py  apps.py  cache.py  email_service.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backendServer/ingestion/: admin.py  deduplicator.py  models.py  safety_scorer.py  services.py  standardizer.py  tasks.py  views.py
(+260 files in other folders)
