[project]
name = "backendserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "pillow>=12.1.0",
    "psycopg>=3.3.2 ; sys_platform != 'darwin'",
    "psycopg[binary]>=3.3.2",
    "psycopg[binary]>=3.3.2 ; sys_platform == 'darwin'",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.5",
    "icalendar>=6.1.0",
    "requests>=2.32.0",
    "thefuzz>=0.22.0",
    "google-genai>=1.66.0",
    "django-unfold>=0.83.1",
    "beautifulsoup4>=4.14.3",
    "pyjwt[crypto]>=2.10.0",
    # 1.x exposes the `brevo_python` module (TransactionalEmailsApi/SendSmtpEmail API
    # used in email_service.py). 4.x is a Fern rewrite that imports as `brevo` with a
    # different API — do not bump without porting email_service.py.
    "brevo-python>=1.2.0,<2",
    "gunicorn>=26.0.0",
    "playwright>=1.60.0",
    "django-ratelimit>=4.1.0",
]
